# cur

./: README.md  pyproject.toml  requierements.txt
cur/: __init__.py  data.xlsx  data_mod.xlsx  main.py
