[tool.poetry]
name = "cur"
version = "0.1.0"
description = ""
authors = ["artyom <artyom27000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
